Merged internationalization and reimplementation of preferences to trunk.